# FullEarth

./: .gitignore  CMakeLists.txt  FullEarth  LICENSE.md  README.md
.github/workflows/: cmake.yml
res/: FullEarth.desktop  coastline50.geojson  countrieSmall.geojson  settings
src/: EQList.cpp  EQList.h  EQjson.cpp  EQjson.h  FullEarth.cpp  FullEarth.h  Geojson.cpp  Geojson.h  MainWindow.cpp  MainWindow.h  MathToolkit.h  OptionsWindow.cxx  OptionsWindow.h  Parametres.cpp  Parametres.h  ShapeEngine.cpp  ShapeEngine.h  fullearth.sh  json.hpp  main.cpp  verticalBox.cpp  verticalBox.h
